Closed Bug 18089 Opened 26 years ago Closed 26 years ago

uninitialized variable 'convert' used

Categories

(Core :: Internationalization, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: brendan, Assigned: ftang)

References

()

Details

(Whiteboard: fix in local tree.)

nsTextToSubURI.cpp(84) : warning C4700: local variable 'convert' used without having been initialized
Severity: critical → normal
Status: NEW → ASSIGNED
Target Milestone: M13
nsTextToSubURI.cpp have not been called from any code YET. This is one of the work-in-progress cpp file that I was working on before I take over tague's stuff. I will fix this eventually. Mark this from critical to normal and assign it to M13. The whole nsTextToSubURI.cpp have not pass unit test yet.
Why not fix this in M12, or at least #if 0 out the dead code, so the warning doesn't attach to you in the tinderbox page, and annoy me when I grep my build logs for warnings I may have introduced? Thanks, /be
*** Bug 21198 has been marked as a duplicate of this bug. ***
*** Bug 21542 has been marked as a duplicate of this bug. ***
Whiteboard: fix in local tree.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
fix check in.
QA Contact: teruko → ftang
verified
verified
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.