fix bug 18089. r=cata. fix warning a=chofmann